<resources>
    <string name="app_name">AlarmClock</string>
    <string name="pochta">Pochta</string>
    <string name="parol">Parol</string>
    <string name="parolni_unutdingizmi">Parolni unutdingizmi?</string>
    <string name="kirish">Kirish</string>
    <string name="ro_yxatdan_o_tish">Ro`yxatdan o`tish</string>
    <string name="hisobingiz_yo_qmi">Hisobingiz Yo`qmi?</string>
    <string name="parolni_qaytadan_kiriting">Parolni qaytadan kiriting</string>
    <string name="hisobingiz_bormi">Hisobingiz bormi?</string>
    <string name="connect">Connect</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="tasdiqlash_elektron_pochta_kodi">Tasdiqlash elektron pochta kodi</string>
    <string name="time">times</string>
    <string name="comment">coments</string>
    <string name="switchCheck">switchs</string>
    <string name="izoh">Izoh</string>
    <string name="saqlash">Saqlash</string>
    <string name="to_xta">To`xta</string>
</resources>